--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@reduxjs/toolkit": "^1.8.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
@@ -18,6 +19,7 @@
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6"
   },
