--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "@reduxjs/toolkit": "^1.8.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
